prowlarr/prowlarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: autopirate
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f prowlarr.yaml
    kompose.service.type: loadbalancer
    kompose.version: 1.28.0 (c4137012e)
    kompose.volume.storage-class-name: longhorn
  creationTimestamp: null
  labels:
    io.kompose.service: prowlarr
  name: prowlarr
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: prowlarr
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f prowlarr.yaml
        kompose.service.type: loadbalancer
        kompose.version: 1.28.0 (c4137012e)
        kompose.volume.storage-class-name: longhorn
      creationTimestamp: null
      labels:
        io.kompose.network/komposes-default: "true"
        io.kompose.service: prowlarr
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Etc/UTC
          image: lscr.io/linuxserver/prowlarr:latest
          name: prowlarr
          ports:
            - containerPort: 9696
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: prowlarr
      restartPolicy: Always
      volumes:
        - name: prowlarr
          persistentVolumeClaim:
            claimName: prowlarr
status: {}
