prowlarr/prowlarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: autopirate
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: prowlarr.epricesx.duckdns.org
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: prowlarr-tcp
            port:
              number: 9696
